mise en place de la section    titre

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport"content="width=device-width,initiak-scale=1.0">
         <title></title>
-        <link rel="stylesheet" href="style">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <section class="titre">
+        <section class="MON CURRICULUM VITAE">
         </section>
         <section class="description">
         </section>
