--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </section>
         <section class="description">
         </section>
-       <section class="formations">
+       <section class="Informatique, Audio-Visuel">
        </section>
        <section class="competences">
        </section>
