mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </section>
        <section class="formations">
        </section>
-       <section class="competences">
+       <section class="Graphisme, Developpement web, Cadrage, Photographie">
        </section>
        <section class="associations">
        </section>
