mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        </section>
        <section class="competences">
        </section>
-       <section class="associations">
+       <section class="tel:+2290166175989">
        </section>
     </body>
 </html>
