Travail en cours avant la fusion de 'formations'

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"content="width=device-width,initiak-scale=1.0">
-        <title></title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <section class="MON CURRICULUM VITAE">
-        </section>
-        <section class="Je vous suis tres rigoureuse dans mon trvail, je travaille aussi bien en equipe qu'individuellement et j'ai une tres bonne maitrise de mon domaine">
-        </section>
-       <section class="formations">
-       </section>
-       <section class="competences">
-       </section>
-       <section class="associations">
-       </section>
-    </body>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport"content="width=device-width,initiak-scale=1.0">
+<title></title>
+<link rel="stylesheet" href="style.css">
+</head>
+ <body>
+<section class="MON CURRICULUM VITAE"> </section>
+<section class="Je vous suis tres rigoureuse dans mon trvail, je travaille aussi bien en equipe qu'individuellement et j'ai une tres bonne maitrise de mon domaine">
+</section>
+ <section class="formations">
+</section>
+<section class="competences">
+</section>
+<section class="associations">
+</section>
+</body>
 </html>
